syntax = "proto3";

package protoapi;

import "google/protobuf/Empty.proto";
import "google/protobuf/Wrappers.proto";

option go_package = "github.com/nicholasmarco27/UTS_5027221042_Nicholas-Marco-Weinandra/master/common/taskmaster";

// entitas Task
message Task {
    string id = 1;
    string title = 2;
    string description = 3;
    int32 price = 4;
    int32 quantity = 5;
}

message TaskList {
    repeated Task list = 1;
}

service TaskApi {
    rpc CreateTask(Task) returns (Task) {}
    rpc ListTasks(google.protobuf.Empty) returns (TaskList) {}
    rpc UpdateTask(Task) returns (Task) {}
    rpc DeleteTask(google.protobuf.StringValue) returns (google.protobuf.BoolValue) {}
}